--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "two.js": "^0.8.10",
     "vue": "^3.2.37"
   },
   "devDependencies": {
