--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "@bookindesk/test123": "^1.0.1",
     "two.js": "^0.8.10",
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^3.1.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.0",
     "vite": "^3.1.0"
   }
 }
