--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "lindengarden",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@bookindesk/test123": "^1.0.1",
-    "two.js": "^0.8.10",
-    "vue": "^3.2.37"
-  },
-  "devDependencies": {
-    "@types/jest": "^30.0.0",
-    "@types/vue": "^1.0.31",
-    "@vitejs/plugin-vue": "^3.1.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.4.0",
-    "vite": "^3.1.0"
-  }
+    "name": "lindengarden",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@bookindesk/test123": "^1.0.1",
+        "two.js": "^0.8.10",
+        "vue": "^3.2.37"
+    },
+    "devDependencies": {
+        "@types/jest": "^30.0.0",
+        "@vitejs/plugin-vue": "^3.1.0",
+        "autoprefixer": "^10.4.21",
+        "jest": "^29.7.0",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.17",
+        "ts-jest": "^29.4.0",
+        "vite": "^3.1.0"
+    }
 }
